Add Github mark and link to projects.
We had no way to find the source code for projects, so I put a Github
logomark next to the project name in the title, and linked it to the
project on Github.

--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 		<div class="full-width center-wrapper">
 			<div class="center-vertical"> 
 				<div class="center-spans"><a href="{{ .Site.BaseURL }}" title="Darling"><img class="logo block-centered" src="/img/acorn.svg" /></a></div>
-				<h1 class="title center-spans">{{ .Title }}</h1>
+				<h1 class="title center-spans">{{ .Title }}{{ if .Params.repo }}<a href="https://github.com/darlinggo/{{ .Params.repo }}" title="darlinggo/{{ .Params.repo }} on Github"><img src="/img/github.png" alt="darlinggo/{{ .Params.repo }} on Github" class="github-mark" /></a>{{ end }}</h1>
 				<div class="center-spans">{{ range .Site.Sections.project.Pages.ByTitle }}<a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a> {{ end }}</div>
 			</div>
 		</div>
