Fix out of place apostrophe.
I screwed up pluralisation and ownership. I'm the worst.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{ partial "toc.html" . }}
 
 <div class="markdown-body">
-	<p>Darling is a toolkit for Go that aims to provide simple, modular packages that are light abstractions on top of the Go standard libraries. Unlike <a href="https://impractical.engineering/unmaintained" title="Unmaintained on the Impractical Engineering blog">the rest of Impractical Lab’s projects</a>, Darling is built with the community in mind, and we will do what we can to support use cases outside our own.</p>
+	<p>Darling is a toolkit for Go that aims to provide simple, modular packages that are light abstractions on top of the Go standard libraries. Unlike <a href="https://impractical.engineering/unmaintained" title="Unmaintained on the Impractical Engineering blog">the rest of Impractical Labs’ projects</a>, Darling is built with the community in mind, and we will do what we can to support use cases outside our own.</p>
 	<p>A project becomes a Darling project when we feel we’ve solved it in a general enough way that it would be useful to other, not-us people.</p>
 </div>
 {{ partial "footer.html" . }}
