--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,18 @@
 		<script src="/js/highlight.pack.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
+		<script type="text/javascript">
+			var _gauges = _gauges || [];
+			(function() {
+				var t   = document.createElement('script');
+				t.type  = 'text/javascript';
+				t.async = true;
+				t.id    = 'gauges-tracker';
+				t.setAttribute('data-site-id', '57a0310c4b2ffa062800746b');
+				t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+				t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(t, s);
+			})();
+		</script>
 	</body>
 </html>
