Add a trailing slash to go-import.
Add a trailing slash to our go-import command, in an attempt to strictly
abide by the vanity URL rules. Technically, the go-import path should be
identical to the URL the page is served by, and the URL always has a
trailing slash, so...

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Darling{{ if not .IsHome }} - {{ .Title }}{{ end }}</title>{{ if .Params.repo }}
-		<meta name="go-import" content="{{ .Site.BaseURL}}{{ .Params.repo }} git https://github.com/darlinggo/{{ .Params.repo }}">{{ end }}
+		<meta name="go-import" content="{{ .Site.BaseURL}}{{ .Params.repo }}/ git https://github.com/darlinggo/{{ .Params.repo }}">{{ end }}
 		<link href="/css/github.css" rel="stylesheet" type="text/css">
 		<link href="/css/syntax.css" rel="stylesheet" type="text/css">
 		<link href="/css/theme.css" rel="stylesheet" type="text/css">
