--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,8 @@
 {{ partial "toc.html" . }}
 
 <div class="markdown-body">
-	<p>Darling is a toolkit for Go that aims to provide simple, modular packages that are light abstractions on top of the Go standard libraries. Unlike <a href="https://impractical.engineering/unmaintained" title="Unmaintained on the Impractical Engineering blog">the rest of Impractical Labs’ projects</a>, Darling is built with the community in mind, and we will do what we can to support use cases outside our own.</p>
-	<p>A project becomes a Darling project when we feel we’ve solved it in a general enough way that it would be useful to other, not-us people.</p>
+	<p>Darling is a toolkit for Go that aims to provide simple, modular packages that are light abstractions on top of the Go standard libraries. They are built to work well together, but to also fit into your existing codebase, letting you pick and choose what you use.</p>
+	<p>Darling projects aim to be highly testable, eschewing global, mutable state and utilising interfaces, to make stubbing pieces out simpler. They rely heavily on the standard library, and do their best to avoid external dependencies.</p>
+	<p>Generally, a package gets added to Darling when we find ourselves rewriting code that matches these descriptions over and over again, though we welcome contributions from the community. Our aim is to provide a ready set of tools for building web services in Go that don't do any magic, aren't particularly clever, but are simple, reliable, and predictable.</p>
 </div>
 {{ partial "footer.html" . }}
